<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="library">Медиатека</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="support">Написать в поддержку</string>
    <string name="share">Поделиться приложением</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="praktikum_url">https://practicum.yandex.ru/android-developer/ </string>
    <string name="praktikum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="email">viraremi@ya.ru</string>
    <string name="email_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="search_err_no_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_err_not_found">Ничего не нашлось</string>
    <string name="search_err_btn_refresh">Обновить</string>
    <string name="search_history_header">Вы искали</string>
    <string name="search_history_btn_clear">Очистить историю</string>
    <string name="player_track_info_time">Длительность</string>
    <string name="player_track_info_album">Альбом</string>
    <string name="player_track_info_year">Год</string>
    <string name="player_track_info_genre">Жанр</string>
    <string name="player_track_info_country">Страна</string>
    <string name="player_timer_zero_zero">00:00</string>
    <string name="library_header">Медиатека</string>
    <string name="library_err_empty_favorite">Ваша медиатека пуста</string>
    <string name="library_err_empty_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="library_btn_newPlayList">Новый плейлист</string>
    <string name="library_tab_favorite">Избранные треки</string>
    <string name="library_tab_playlist">Плейлисты</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="mandatory_name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>

    <string name="close_alert_title">Завершить создание плейлиста?</string>
    <string name="close_alert_message">Все несохраненные данные будут потеряны</string>
    <string name="close_alert_negative">Отмена</string>
    <string name="close_alert_positive">Завершить</string>

    <string name="playlist_created">"Плейлист %1$s создан"</string>
    <string name="msg_add_track_success">Добавлено в плейлист %1$s</string>
    <string name="msg_add_track_fail">Трек уже добавлен в плейлист %1$s</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>

    <string name="delete_alert_title">Удалить трек</string>
    <string name="delete_alert_message">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete_playlist_alert_message">Хотите удалить плейлист %1$s?</string>
    <string name="delete_alert_negative">Нет</string>
    <string name="delete_alert_positive">Да</string>

    <string name="no_tracks_for_share">В данном плейлисте нет списка треков, которым можно поделиться</string>

    <string name="share_msg_name">Название: %1$s\n</string>
    <string name="share_msg_description">Описание: %1$s\n</string>
</resources>