<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/main_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    android:id="@+id/main"
    tools:context=".main.ui.activity.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="500"
        android:textColor="@color/white"
        android:textSize="@dimen/primary_text_size"
        android:layout_marginBottom="@dimen/padding"/>

    <Button
        style="@style/main_button"
        android:id="@+id/button_search"
        android:text="@string/search"
        app:icon="@drawable/search"/>

    <Button
        style="@style/main_button"
        android:id="@+id/button_library"
        android:text="@string/library"
        app:icon="@drawable/library"/>

    <Button
        style="@style/main_button"
        android:id="@+id/button_settings"
        android:text="@string/settings"
        app:icon="@drawable/settings"/>
</LinearLayout>