<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/secondary_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main_settings"
    tools:context="com.practicum.playlistmaker.settings.ui.activity.SettingsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        style="@style/sec_menu_header"
        android:text="@string/settings" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        style="@style/settings_button_text"
        android:id="@+id/themeSwitcher"
        android:text="@string/dark_theme"
        android:layout_gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <FrameLayout
        android:id="@+id/settings_btn_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/settings_button_text"
            android:text="@string/share"/>

        <ImageView
            style="@style/secondary_button_icon"
            android:src="@drawable/share" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/settings_btn_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/settings_button_text"
            android:text="@string/support"/>

        <ImageView
            style="@style/secondary_button_icon"
            android:src="@drawable/support" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/settings_btn_ua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/settings_button_text"
            android:text="@string/user_agreement"/>

        <ImageView
            style="@style/secondary_button_icon"
            android:src="@drawable/arrowforward" />
    </FrameLayout>
</LinearLayout>