<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.ui.activity.SearchFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            style="@style/back_button_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search_back"
            android:src="@drawable/arrowback"/>

        <TextView
            style="@style/sec_menu_header"
            android:text="@string/search" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/padding"
        android:layout_marginVertical="@dimen/half_padding"
        android:background="@drawable/search_background">

        <ImageView
            style="@style/search_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/search_icon"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="12dp"/>

        <EditText
            style="@style/editText"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/search_bar"
            android:hint="@string/search"
            android:maxLines="1"
            android:maxLength="50"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <ImageView
            style="@style/search_icon"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/search_clear"
            android:src="@drawable/clear_btn"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="12dp"
            android:visibility="invisible"/>
    </LinearLayout>
    
    <ProgressBar
        android:id="@+id/search_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        android:indeterminateTint="@color/white_blue"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/search_err_not_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            style="@style/err_img_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/notification_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_err_not_found"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_err_no_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            style="@style/search_err_img_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/notification_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_err_no_connection"/>

        <Button
            style="@style/search_buttons"
            android:id="@+id/search_err_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_err_btn_refresh"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_result_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_history"
        android:visibility="visible">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/notification_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_history_header"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_history_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/search_history_clear"
                style="@style/search_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_history_btn_clear"
                android:layout_marginTop="24dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>