<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/main_player"
    tools:context="com.practicum.playlistmaker.player.ui.fragment.PlayerFragment"
    style="@style/secondary_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/secondary_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.07" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.93" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/player_barrier_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_tags="tag_time_title, tag_album_title, tag_year_title, tag_genre_title, tag_country_title"
                app:barrierDirection="end"/>

            <ImageView
                android:id="@+id/player_back"
                style="@style/back_button_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrowback"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/player_art"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:src="@drawable/placeholder_big"
                app:layout_constraintEnd_toStartOf="@id/rightGuideline"
                app:layout_constraintStart_toEndOf="@id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@id/player_back" />

            <TextView
                android:id="@+id/player_track_name"
                style="@style/player_track_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ellipsize="end"
                android:fontFamily="@font/ys_display_medium"
                android:maxLines="1"
                android:textFontWeight="400"
                android:textSize="22sp"
                app:layout_constraintEnd_toStartOf="@id/rightGuideline"
                app:layout_constraintStart_toEndOf="@id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@id/player_art"
                tools:text="NameNameNameNameNameNName" />

            <TextView
                android:id="@+id/player_track_artist"
                style="@style/player_track_artist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ellipsize="end"
                android:fontFamily="@font/ys_display_medium"
                android:maxLines="1"
                android:textFontWeight="400"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/rightGuideline"
                app:layout_constraintStart_toEndOf="@id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@id/player_track_name"
                tools:text="ArtistArtistArtistArtistArtistArtistArtistArtistArtistArtist" />

            <ImageView
                android:id="@+id/player_btn_add_to_list"
                style="@style/player_btn_add_to_list"
                android:src="@drawable/player_sec_btn_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/player_btn_play"
                app:layout_constraintStart_toEndOf="@id/leftGuideline"
                app:layout_constraintTop_toTopOf="@id/player_btn_play"/>

            <ImageView
                android:id="@+id/player_btn_add_to_list_ico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/button_add_to_playlist"
                app:layout_constraintStart_toStartOf="@id/player_btn_add_to_list"
                app:layout_constraintEnd_toEndOf="@id/player_btn_add_to_list"
                app:layout_constraintTop_toTopOf="@id/player_btn_add_to_list"
                app:layout_constraintBottom_toBottomOf="@id/player_btn_add_to_list"/>

            <ImageView
                android:id="@+id/player_btn_play"
                style="@style/player_btn_play"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toStartOf="@id/player_btn_like"
                app:layout_constraintStart_toEndOf="@id/player_btn_add_to_list"
                app:layout_constraintTop_toBottomOf="@id/player_track_artist" />

            <TextView
                android:id="@+id/player_current_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_timer_zero_zero"
                app:layout_constraintEnd_toEndOf="@id/player_btn_play"
                app:layout_constraintStart_toStartOf="@id/player_btn_play"
                app:layout_constraintTop_toBottomOf="@id/player_btn_play" />

            <ImageView
                android:id="@+id/player_btn_like"
                style="@style/player_btn_like"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/player_sec_btn_background"
                app:layout_constraintBottom_toBottomOf="@id/player_btn_play"
                app:layout_constraintEnd_toStartOf="@id/rightGuideline"
                app:layout_constraintTop_toTopOf="@id/player_btn_play"/>

            <ImageView
                android:id="@+id/player_btn_like_ico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/button_like"
                app:layout_constraintStart_toStartOf="@id/player_btn_like"
                app:layout_constraintEnd_toEndOf="@id/player_btn_like"
                app:layout_constraintTop_toTopOf="@id/player_btn_like"
                app:layout_constraintBottom_toBottomOf="@id/player_btn_like"/>

            <TextView
                android:id="@+id/player_track_time_title"
                app:layout_constraintTag="tag_time_title"
                style="@style/player_track_info_title"
                android:text="@string/player_track_info_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toEndOf="@id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@id/player_current_time"/>

            <TextView
                android:id="@+id/player_track_time_value"
                style="@style/player_track_info_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toStartOf="@id/rightGuideline"
                app:layout_constraintStart_toEndOf="@id/player_barrier_title"
                app:layout_constraintTop_toBottomOf="@id/player_current_time"
                tools:text="timeValue" />

            <TextView
                android:id="@+id/player_track_album_title"
                app:layout_constraintTag="tag_album_title"
                style="@style/player_track_info_title"
                android:text="@string/player_track_info_album"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@id/player_track_time_title"/>

            <TextView
                android:id="@+id/player_track_album_value"
                style="@style/player_track_info_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/rightGuideline"
                app:layout_constraintStart_toEndOf="@id/player_barrier_title"
                app:layout_constraintTop_toBottomOf="@id/player_track_time_value"
                tools:text="albumValue" />

            <TextView
                android:id="@+id/player_track_year_title"
                app:layout_constraintTag="tag_year_title"
                style="@style/player_track_info_title"
                android:text="@string/player_track_info_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@id/player_track_album_title"/>

            <TextView
                android:id="@+id/player_track_year_value"
                style="@style/player_track_info_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/rightGuideline"
                app:layout_constraintStart_toEndOf="@id/player_barrier_title"
                app:layout_constraintTop_toBottomOf="@id/player_track_album_value"
                tools:text="yearValue" />

            <TextView
                android:id="@+id/player_track_genre_title"
                app:layout_constraintTag="tag_genre_title"
                style="@style/player_track_info_title"
                android:text="@string/player_track_info_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@id/player_track_year_title"/>

            <TextView
                android:id="@+id/player_track_genre_value"
                style="@style/player_track_info_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/rightGuideline"
                app:layout_constraintStart_toEndOf="@id/player_barrier_title"
                app:layout_constraintTop_toBottomOf="@id/player_track_year_value"
                tools:text="genreValue" />

            <TextView
                android:id="@+id/player_track_country_title"
                app:layout_constraintTag="tag_country_title"
                style="@style/player_track_info_title"
                android:text="@string/player_track_info_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@id/player_track_genre_title"/>

            <TextView
                android:id="@+id/player_track_country_value"
                style="@style/player_track_info_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/rightGuideline"
                app:layout_constraintStart_toEndOf="@id/player_barrier_title"
                app:layout_constraintTop_toBottomOf="@id/player_track_genre_value"
                tools:text="countryValue" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <View android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/player_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <include
            layout="@layout/bottom_sheet_add_playlist"
            android:id="@+id/included_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>